# strelitzia

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  enter-devcontainer.sh  enter_devcontainer.sh  init-host-git.sh  setup-git.sh  test-setup.sh
.github/workflows/: devcontainer-test.yml
docs/: ARCHITECTURE.md  rust_overview.md
examples/: api_demo.rs  cvt_1d.rs  cvt_2d.rs  paraview_demo.rs  simple_cvt.rs  time_series_export.rs  vtk_fields_export.rs
src/: common.rs  lib.rs  main.rs  prelude.rs
src/fields/: IMPLEMENTATION_PLAN.md  README.md  RUST_CONCEPTS.md  aliases.rs  cast.rs  layout.rs  mod.rs  ops.rs  storage.rs  traits.rs  types.rs
src/geometry/: axis_aligned_bounding_box.rs  mod.rs
src/meshgen/: cvt_plot.rs  cvt_plot_2d.rs  cvt_solvers.rs  cvt_vtk.rs  cvt_vtk_2d.rs  mesh.rs  mod.rs
src/meshgen/cvt/: domain_1d.rs  domain_2d.rs  mod.rs
src/multiarray/: README.md  aliases.rs  linalg.rs  mod.rs  operators.rs  traits.rs  types.rs
src/trees/: kd_tree.rs  mod.rs  tree.rs
src/visualiser/: README.md  encoding.rs  field_export.rs  mod.rs  paraview_writer.rs  vtk_types.rs
tests/: fields_ops_operators_tests.rs  fields_ops_tests.rs  fields_tests.rs  fields_vtk_tests.rs  visualiser_tests.rs
tests/fixtures/golden_vtu/: README.md
tutorials/: README.md
tutorials/advanced/: 03_01_lifetimes.ipynb  03_02_smart_pointers.ipynb  03_03_concurrency.ipynb  03_04_macros_unsafe_performance.ipynb
tutorials/beginner/: 01_01_fundamentals.ipynb  01_02_ownership.ipynb  01_03_collections_patterns.ipynb
(+2 files in other folders)
